# ethereum

./: .gitignore  Backup.py  CODE_REVIEW.md  Constants.py  Dockerfile  Environment.py  MEV.py  Makefile  README.md  Repository Review: Ethereum Staking Node.md  Staker.py  WALKTHROUGH.md  pyproject.toml  requirements.txt  template.yaml  versions.env
.github/workflows/: ci.yml  deploy.yml  pr.yml  release.yml  test.yml
cli/: README.md  __main__.py  bip39.py  cli.py  pyproject.toml  requirements.txt  test_cli.py  test_tools.py  tools.py
cli/bip39/: __init__.py  bip39.py  gemini.py  requirements.txt
cli/slip39/: __init__.py  requirements.txt
scripts/: build.sh  checkpoint.sh  cli.sh  ddns.py  deploy.sh  qr.py  run.sh  update.py  wol.py
scripts/vpn/: download.py  nordvpn.html  setup.sh
src/staker/: environment.py  node.py  snapshot.py
tests/: conftest.py  test_environment.py  test_mev.py  test_node.py  test_snapshot.py
vpn/: download.py  setup.sh
