[project]
name = "ethereum"
version = "0.1.0"
description = "Ethereum staking node orchestrator"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "requests",
    "rich",
    "geoip2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
