[project]
name = "staker"
version = "0.1.0"
description = "Ethereum staking node orchestrator"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "requests",
    "rich",
    "geoip2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-n auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "vpn/*"]

[tool.coverage.report]
# Target: 90% - set fail_under=90 once tests are added
fail_under = 19
show_missing = true
