[project]
name = "cli"
version = "0.1.0"
description = "A command-line interface application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hdwallet>=3.6.1",
    "mnemonic>=0.21",
    "requests>=2.32.5",
    "slip39>=14.0.2",
    "typer>=0.20.1",
]

[dependency-groups]
dev = ["pytest", "pyinstaller"]